--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "babel-jest": "^29.5.0",
-    "dotenv": "^8.2.0",
+  
     "errorhandler": "^1.5.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
@@ -57,8 +57,9 @@
     "morgan": "^1.10.0",
     "objection": "^3.0.1",
     "objection-unique": "^1.2.2",
-    "passport": "^0.6.0",
+    "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "dotenv": "^8.2.0"
   }
 }
