--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,9 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.6",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "~8.1",
     "css-loader": "^5.0.0",
@@ -34,8 +37,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^8.0.0",
     "prop-types": "~15.7",
-    "react": "~16.13",
-    "react-dom": "~16.13",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "5.2",
     "redbox-react": "~1.6",
