--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hot-loader": "^4.12.21",
+    "react-dropzone": "^11.3.1",
     "react-router-dom": "5.2",
     "redbox-react": "~1.6",
     "sass-loader": "^6.0.7",
